--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 asgiref==3.8.1
 Django==5.0.4
 django-cors-headers==4.3.1
+Faker==25.0.1
+pillow==10.3.0
+python-dateutil==2.9.0.post0
+six==1.16.0
 sqlparse==0.5.0
+mysqlclient
+python-dotenv
